feat(excel-rma): Add transaction lock for sales invoice
serial assign will now lock sales invoice till success

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -1,5 +1,5 @@
 <ion-fab vertical="top" horizontal="end" slot="fixed" class="ion-margin-end" *ngIf="remaining > 0">
-    <ion-fab-button [disabled]="!permissionState.delivery_note.create" class="fab-position" (click)="submitDeliveryNote()">
+    <ion-fab-button [disabled]="!permissionState.delivery_note.create || submit" class="fab-position" (click)="submitDeliveryNote()">
         <ion-icon name="lock-closed"></ion-icon>
     </ion-fab-button>
 </ion-fab>
