fix(rma-warranty):Updated service-invoice and stock entry listings

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -13,7 +13,21 @@
         >
           <ion-button
             *ngIf="
-              warrantyObject?.status_history &&
+              dataSource.length &&
+              !(
+                warrantyObject?.status_history[
+                  warrantyObject?.status_history.length - 1
+                ]?.verdict === 'Deliver to Customer'
+              )
+            "
+            color="danger"
+            fill="outline"
+            (click)="finalizeEntry()"
+          >
+            Finalize Stock Entry
+          </ion-button>
+          <ion-button
+            *ngIf="
               !(
                 warrantyObject?.status_history[
                   warrantyObject?.status_history.length - 1
@@ -25,6 +39,18 @@
           >
             Add
           </ion-button>
+
+          <ion-card-subtitle
+            *ngIf="
+              warrantyObject?.status_history[
+                warrantyObject?.status_history.length - 1
+              ]?.verdict === 'Deliver to Customer'
+            "
+            color="danger"
+            [routerLink]="['/warranty/stock-entry', 'new', warrantyClaimUuid]"
+          >
+            Revert Stock Entries To Recreate
+          </ion-card-subtitle>
         </ion-col>
       </ion-row>
     </ion-grid>
