feat(rma-warranty):Bulk Warranty Claim Creation

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -299,8 +299,8 @@
 
 <ion-card
   *ngIf="
-    statusHistory.length &&
-    statusHistory[statusHistory.length - 1]?.delivery_status.length
+    statusHistory?.data?.length &&
+    statusHistory?.data[statusHistory?.data?.length - 1]?.delivery_status.length
   "
 >
   <ion-card-header>
