feat(rma-frontend): Added Delivery Status tag for Sales Invoice voucher change 5

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -141,7 +141,7 @@
                 <mat-label>Delivery Status</mat-label>
                 <mat-select
                   formControlName="delivery_status"
-                  (selectionChange)="deliveryStatusChange($event.value)"
+                  (selectionChange)="setFilter()"
                 >
                   <mat-option
                     *ngFor="let delivery_status of delivery_statuses"
