--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -208,7 +208,7 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col>
+        <ion-col size-md="6">
           <ion-item lines="none">
             <mat-form-field class="full-width">
               <mat-label>Delivery Status</mat-label>
