feat(Excel-rma): Add brand settings and favicon in global defaults

--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -310,6 +310,33 @@
           </ion-row>
         </ion-grid>
 
+
+        <ion-card-header>
+          <ion-card-title>
+            <ion-text>
+              Brand Settings
+            </ion-text>
+          </ion-card-title>
+        </ion-card-header>
+
+        <ion-grid class="ion-padding">
+          <ion-row>
+
+            <ion-col size-md="6">
+              <mat-form-field class="mat-input-wrapper">
+                <input
+                  matTooltip="Standard Favicon size : 32x32"
+                  matInput
+                  placeholder="Favicon Image"
+                  type="text"
+                  formControlName="faviconURL"
+                />
+              </mat-form-field>
+            </ion-col>
+
+          </ion-row>
+        </ion-grid>
+
       </form>
       <ion-grid class="ion-padding">
         <ion-row>
