--- a/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
@@ -256,7 +256,7 @@
               (click)="p.open()"
             >
               <ion-text>
-                {{row.minimumPrice | curFormat | async}}
+                {{row.minimumPrice || 0 | curFormat | async}}
               </ion-text>
               <sat-popover
                 #p
@@ -287,7 +287,7 @@
               (click)="p.open()"
             >
               <ion-text>
-                {{row.mrp | curFormat | async}}
+                {{row.mrp || 0 | curFormat | async}}
               </ion-text>
               <sat-popover
                 #p
