--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -289,11 +289,20 @@
                     </mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="qty">
+                    <mat-header-cell *matHeaderCellDef>Qty</mat-header-cell>
+                    <mat-cell *matCellDef="let row">
+                        <ng-container >
+                            <input class="table-text-align-center" matInput type="number" [(ngModel)]="row.qty" />
+                        </ng-container>
+                    </mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="basic_rate">
                         <mat-header-cell *matHeaderCellDef>Base Rate</mat-header-cell>
                         <mat-cell *matCellDef="let row">
                             <ng-container >
-                                <input matInput type="number" [(ngModel)]="row.basic_rate" />
+                                <input class="table-text-align-center" matInput type="number" [(ngModel)]="row.basic_rate" />
                             </ng-container>
                         </mat-cell>
                 </ng-container>
@@ -395,7 +404,7 @@
                     <mat-header-cell *matHeaderCellDef>Base Rate</mat-header-cell>
                     <mat-cell *matCellDef="let row">
                         <ng-container *ngIf="permissionState?.stock_entry_receipt?.read">
-                            <input matInput type="number" [disabled]="readonly && status !=='Draft'" [(ngModel)]="row.basic_rate" />
+                            <input class="table-text-align-center" matInput type="number" [disabled]="readonly && status !=='Draft'" [(ngModel)]="row.basic_rate" />
                         </ng-container>
                     </mat-cell>
                 </ng-container>
