feat(rma-frontend): Remarks field added to Sales Return

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
@@ -122,6 +122,14 @@
             </mat-form-field>
           </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-col size-md="6">
+            <mat-form-field class="example-full-width">
+              <mat-label>Remarks</mat-label>
+              <textarea matInput [formControl]="remarks"></textarea>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
       </ion-grid>
     </ion-card-content>
   </ion-card>
