feat(rma-frontend): Remarks field added to Sales Return 1

--- a/packages/rma-frontend/src/app/sales-ui/sales-return-details/sales-return-details.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return-details/sales-return-details.page.html
@@ -88,7 +88,7 @@
               <ion-input
               readonly="true"
               type="string"
-              [value]="salesReturnDetails?.instructions ? salesReturnDetails?.instructions : '' "
+              [value]="salesReturnDetails?.instructions || '' "
               ></ion-input>
             </ion-item>
           </ion-col>
