--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
@@ -7,16 +7,58 @@
         </ion-card-title>
       </ion-col>
       <ion-col class="ion-text-right">
-        <ion-button
-          (click)="getPrint()"
-          (ctrlM)="getPrint()"
-          color="primary"
-          matTooltip="print"
-          matTooltipPosition="above"
-          matTooltipClass="tooltip"
-        >
-          <ion-icon slot="icon-only" name="print-outline"></ion-icon>
-        </ion-button>
+        <ion-fab color="danger" horizontal="end">
+          <ion-fab-button color="primary">
+            <ion-icon name="chevron-back-circle-outline"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-list side="start">
+            <ion-fab-button
+              *ngIf="warrantyClaimsDetails?.claim_status !== 'Cancelled'"
+              [routerLink]="[
+                '/warranty/warranty-claim',
+                'edit',
+                warrantyClaimsDetails.uuid
+              ]"
+              matTooltip="edit"
+              matTooltipPosition="above"
+              matTooltipClass="tooltip"
+              color="warning"
+            >
+              <ion-icon name="create-outline"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button
+              *ngIf="warrantyClaimsDetails?.claim_status !== 'Cancelled'"
+              (click)="resetEntry()"
+              matTooltip="cancel"
+              matTooltipPosition="above"
+              matTooltipClass="tooltip"
+              color="danger"
+            >
+              <ion-icon name="close-circle-outline"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button
+              *ngIf="warrantyClaimsDetails?.claim_status !== 'Cancelled'"
+              (click)="getPrint()"
+              matTooltip="print"
+              matTooltipPosition="above"
+              matTooltipClass="tooltip"
+              (ctrlM)="getPrint()"
+              color="primary"
+            >
+              <ion-icon name="print-outline"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button
+              *ngIf="warrantyClaimsDetails?.claim_status === 'Cancelled'"
+              (click)="removeEntry()"
+              matTooltip="delete"
+              matTooltipPosition="above"
+              matTooltipClass="tooltip"
+              color="danger"
+            >
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-fab-button>
+          </ion-fab-list>
+        </ion-fab>
       </ion-col>
     </ion-row>
   </ion-card-header>
