--- a/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
@@ -260,22 +260,6 @@
             <mat-footer-cell *matFooterCellDef></mat-footer-cell>
           </ng-container>
 
-          <ng-container matColumnDef="edit">
-            <mat-header-cell *matHeaderCellDef>Edit</mat-header-cell>
-            <mat-cell *matCellDef="let row; let i = index">
-              <ion-button
-                [disabled]="row.set ==='Bulk'|| row.status_history[row.status_history.length-1].verdict !=='Received from Customer'"
-                fill="clear"
-                class="ion-no-padding"
-                color="danger"
-                [routerLink]="['/warranty/warranty-claim', 'edit',row.uuid]"
-              >
-                <ion-icon slot="icon-only" name="create-outline"></ion-icon>
-              </ion-button>
-            </mat-cell>
-            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-          </ng-container>
-
           <ng-container matColumnDef="claim_no">
             <mat-header-cell *matHeaderCellDef mat-sort-header="claim_no">
               Claim no
@@ -424,7 +408,7 @@
 
           <mat-row
             *matRowDef="let row; columns: displayedColumns;"
-            [ngStyle]="{'background-color':row.set==='Bulk'?'#F4F4FB':row.set==='Part'?'#FDFAE5':'rgb(255, 255, 255)'
+            [ngStyle]="{'background-color':row.claim_status==='Cancelled'?'#F8DEDE':row.set==='Bulk'?'#F4F4FB':row.set==='Part'?'#FDFAE5':'rgb(255, 255, 255)'
 
           }"
           ></mat-row>
